# kafka

./: .gitignore  BENCHMARKS.md  CLAUDE.md  CONTRIBUTING.md  NOTICE  POST.md  README.md  REGRESSION-TEST-PLAN.md  TESTS.md  compare.js  debug.ts  docker-compose-multiple.yml  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  tsconfig.test.json
.claude/: settings.local.json
benchmarks/: consumer.ts  crc32c.ts  fetch.ts  lz4.ts  murmur2.ts  package.json  pnpm-workspace.yaml  produce.ts  producer-batch-old.ts  producer-batch.ts  producer-single.ts  producer.ts  producerbatch.ts  snappy.ts
docker/: .env.sample  _compose.yml  compose-apache-kafka.yml  compose-ci.yml  compose-cluster.yml  compose-github-ci.yml  compose-local.yml  compose-multiple.yml  compose-single.yml  compose.yml  sasl.yml
docs/: admin.md  apis-status.md  base.md  confluent-schema-registry.md  consumer.md  diagnostic.md  docker-compose-sasl-plain.md  docker-compose-sasl-scram-sha.md  docker-compose-ssl.md  kips.md  metrics.md  other.md  producer.md  transactions.md
load-tests/: package-lock.json  package.json
migration/: migration.test.ts
native/: Cargo.toml  Makefile.toml  build.rs  docker-compose.yml  index.d.ts  index.js  package.json
native/src/: includes.h  lib.rs
playground/: api-versions.ts  fetch.ts  list-offsets.ts  produce.ts  utils.ts
regression/: README.md
scripts/: bump-version.ts  create-api.ts  detect-api-support.ts  docker.sh  docker.ts  generate-api-definitions.ts  generate-apis.ts  generate-errors.ts  (+3 more)
(+719 files in other folders)
