[package]
  edition = "2021"
  name    = "gssapi"
  version = "0.1.0"

[lib]
  crate-type = ["cdylib"]

[dependencies]
  uuid        = { version = "1.18.1", features = ["v4"] }
  napi        = "3.0.0"
  napi-derive = "3.0.0"

[build-dependencies]
  napi-build = "2"
  bindgen    = "0.69"

[profile.release]
  lto   = true
  strip = "symbols"
